--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <title>Three_Word_Game</title>
 </head>
 <body>
-    <main></main>
+    <header><h1>TriLetterGuess</h1></header>
+    <section>
+        <h1>How To Play</h1>
+        <h2>Guess the Wordle in 10 tries.</h2>
+        <br>
+        <h3>• Each guess must be a valid 3-letter word.</h3>
+        <h3>• The color of the tiles will change to show how close your guess was to the word.</h3>
+    </section>
+    <main>
+        <div class="container">
+        </div>
+    </main>
+    <button type="button"></button>
 </body>
 </html>
