olivér alapozott dj-nek

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <div class="container">
         </div>
     </main>
-    <button type="button"></button>
+    <footer></footer>
 </body>
 </html>
