--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="ico"><img src="./icons/lightbulb.png" alt="icon"></div>
-        <div><h1>TriLetterGuess</h1></div>
+        <div class="h1"><h1>TriLetterGuess</h1></div>
     </header>
     <section>
         <h1>How To Play</h1>
