--- a/index.html
+++ b/index.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <script src="./app.js" defer></script>
-    <title>Three_Word_Game</title>
+    <title>Three Word Game</title>
 </head>
 <body>
     <header>
-        <div class="ico"><img src="./icons/lightbulb.png" alt="icon"></div>
-        <div class="h1"><h1>TriLetterGuess</h1></div>
+        <div class="ico"><img src="./icons/lightbulb.png" alt="icon" title="How to play"><p></p></div>
+        <h1>TriLetterGuess</h1>
     </header>
-    <section>
-        <h1>How To Play</h1>
-        <h2>Guess the Word in 10 tries.</h2>
-        <br>
-        <h3>• Each guess must be a valid 3-letter word.</h3>
-        <h3>• The color of the tiles will change to show how close your guess was to the word.</h3>
-    </section>
     <main>
         <div class="container">
         </div>
