popup and footer

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <div class="container">
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <ul>
+            <li>Contact</li>
+            <li>Copyright © 2023-2024 TriLetterGame. All rights reserved.</li>
+            <li>Support</li>
+        </ul>
+    </footer>
 </body>
 </html>
