--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <div class="ico"><img src="./icons/lightbulb.png" alt="icon" title="How to play"><p></p></div>
         <h1>TriLetterGuess</h1>
     </header>
-    <main>
-        <div class="container">
-        </div>
-    </main>
+    <div class="container">
+      <div id="guessGrid"></div>
+      <div id="keyboard"></div>
+    </div>
     <footer>
         <ul>
             <li>Contact</li>
