--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </div>
     <footer>
         <ul>
-            <li>Contact</li>
+            <li id="egy">Contact<p class="egy"></p></li>
             <li>Copyright © 2023-2024 TriLetterGame. All rights reserved.</li>
-            <li>Support</li>
+            <li id="masodik">Support<p class="ketto"></p></li>
         </ul>
     </footer>
 </body>
