--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
     </header>
     <hr>
     <div class="container">
-        <div class="popup">
+        <div class="popup" id="popup">
             <div class="popup-content">
-                <p id="popup-message"></p>
-                <button id="replay">Replay</button>
+              <p id="popup-message"></p>
+              <button id="replay">Replay</button>
             </div>
-        </div>
+          </div>
+          
             <div id="guessGrid"></div>
             <div id="keyboard"></div>
         </div>
