--- a/index.html
+++ b/index.html
@@ -24,19 +24,16 @@
               <p id="popup-message"></p>
               <button id="replay">Replay</button>
             </div>
-          </div>
-          
-            <div id="guessGrid"></div>
-            <div id="keyboard"></div>
         </div>
-      <div id="guessGrid"></div>
-      <div id="keyboard"></div>
+          
+        <div id="guessGrid"></div>
+        <div id="keyboard"></div>
     </div>
     <footer>
         <ul>
-            <li id="egy">Contact<p class="egy"></p></li>
+            <li id="egy">Contact</li>
             <li>Copyright © 2023-2024 TriLetterGame. All rights reserved.</li>
-            <li id="masodik">Support<p class="ketto"></p></li>
+            <li id="masodik">Support</li>
         </ul>
     </footer>
 </body>
