--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <hr>
     <div class="container">
         <div class="popup" id="popup">
-            <div class="popup-content">
-              <p id="popup-message"></p>
+            <p id="popup-message"></p>
               <button id="replay">Replay</button>
-            </div>
-        </div>
+        </div>        
+        <div id="guessGrid"></div>
+        <div id="keyboard"></div>
     </div>
     <footer>
         <ul>
