--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div id="guessGrid"></div>
         <div id="keyboard"></div>
     </div>
+    <div class="placeholder"></div>
     <footer>
         <ul>
             <li id="egy">Contact</li>
