--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./icons/icons8-abc-64.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <script src="./app.js" defer></script>
-    <title>Three Word Game</title>
+    <title>Three Letter Game</title>
 </head>
 
 <body>
@@ -27,13 +27,12 @@
         <div id="keyboard"></div>
     </div>
     <div class="placeholder"></div>
-    <footer>
+            <footer>
         <ul>
             <li id="egy">Contact</li>
             <li>Copyright © 2023-2024 TriLetterGame. All rights reserved.</li>
             <li id="masodik">Support</li>
         </ul>
-    </footer>
 </body>
 
 </html>
